pages/ksphere/conductor/0.8-beta/adminguide/index.md
---
layout: layout.pug
navigationTitle: Admin Guide
title: Administrator's Guide
menuWeight: 40
beta: true
excerpt: A short guide for Conductor Admin Portal
---

# Overview

Users with the role `Admin` will have access to the Admin Portal in their navbar from anywhere outside the [Integrated Learning Environment](). The Admin Portal enables admins to do a number of tasks essential to the administration of Conductor users:

- **Users** - displays the total users tracked in the Roster

- **Roster**- view admin-relevant user information through the table of user entries:

  1. *First Name* - displays the first name associated with the user account
  1. *Last Name* - displays the last name associated with the user account
  1. *Email* - displays the email associated with the user account
  1. *Role* - displays the role - `Admin` or `Member`, whereby admins all have access to the functionality being described herein and enabled members have access only to the courses
  1. *Status* - displays whether the user has been disabled or not
  1. *Group* - displays the group to which the user belongs, displays *Unassigned* if not
  1. *Courses* - displays the *total courses completed/total available courses*
      - on hover: a modal displays each available course for the user associated with the entry, including unit progress and relevant cluster status
  1. *Last Login* - displays the last date and time (UTC) that a user logged into this instance of Conductor

- **Create Signup Link** - generate/destroy sharable sign-up links for simple, securable sign up scenarios.

- **Actions** - upon checking a selection in the Roster:

    1. enable, disable, or delete users
    1. assign/revoke Admin roles
    1. assign users to and remove users from Groups

- **Group Form** - create/delete Groups
- **Search Bar** - search through roster for individual users by name/email
- **Filter Dropdowns** view their roster through various filters: by Role, by Status, or by Group

# Managing Sign-up Links

Admins can invite users by generating and then sharing a unique and disposable sign-up link with those they want to be users of their Conductor instance.

After selecting *Create Signup Link*, you will be provided with a randomly generated link to the Conductor sign up page. **While active, anyone with this link can visit and sign up as a learner to your organization's Conductor service. Ensure invitees are trustworthy and sign up with a trackable email address. Do not leave the link active longer than necessary.**

If you want to stop the current active registration, select *Delete Signup Link* and the link will no longer work. At any time, if you want to start another active registration, select *Create Signup Link* and a new link will be created that you can share with learners for them to sign up.

# Enabling/Disabling/Deleting Users

Learners are activated by default after they use a valid sign-up link to create a Conductor account. Being `Active` under `Status`means they are enabled to use their Conductor account and any of their available courses.

## Disabling Users

Admins can disable users so that they no longer have access to their Conductor accounts. After they're `Disabled` these users can no longer login and must be enabled by an Admin to regain access.

To disable users, select each of the users you want disabled (select the left-most checkboxes on each line in the roster of the target users), and use the *Actions* dropdown on the upper-right-hand side of the portal screen to select the *Disable* action. After you confirm to disable the user, their entry in the roster will be greyed-out and hidden unless the `Show disabled` box is checked.

## Enabling Users

After being set to `Disabled`, an Admin can re-enable a user by:
(1) selecting that user in the roster.
(2) using the **Actions** dropdown in the upper-right-hand of the Admin portal screen to select `Enable`.

 After you affirm the confirmation modal, their entry will no longer be greyed-out, and they will show up by default with the rest of the non-disabled users.

## Deleting Users

When needed, an Admin can delete a user account from the database altogether. After an account is deleted, the data associated with that account cannot be recovered. You can reinvite a user only re-entered. This should only be used when the need for tracking the record is non-existent.

To delete users:

(1) select each user in the roster you want to delete from the database,
(2) using the **Actions** dropdown in the upper-right-hand of the Admin portal screen to select `Delete`.

**After you confirm that you want to delete these users permanently, there will be no way to recover them.**

# Assigning/Revoking the Admin role

Any Admin can assign the Admin role to another user in their organization. They can also revoke the Admin role from any Admin. Therefore, it is extremely important to only assign the Admin role to those who can be fully trusted with this scope of responsibility.

To assign/revoke the Admin role:

1. select each user in the roster you want to assign or revoke from the Admin role,
1. using the **Actions** dropdown in the upper-right-hand of the Admin portal screen to select `Assign` or `Revoke` according to your aims.

**After you affirm with the confirmation modal that you want to assign or revoke the Admin role to the selected users, the new status will go into effect immediately.**

# Sending Reset-password Link to User's

You can generate a link to share with an individual that will direct them to their Password Reset page, in case a user needs to change their password.

To send an individual a link so that they can reset their password:

1. select *Reset User Password* form, which will cause a searchable dropdown to select the user you wish to provide a reset-password link.
1. share that link with that user ONLY, as *anyone with this link will be able to change that user's password*.

# Groups

Groups are a way to sort larger organizations for easier adminstration. For instance, if an admin were to only want to look at one group in the roster, they would simply need to use the **Group** filter above the roster to select the group you want to see.

## Creating/Deleting Groups

Admins can create and delete groups for ongoing organization and reorganization.

To create/delete a group:

1. type in the name of the group you wish to create or delete in the *Group* form,
1. select the button corresponding to the target action: *Create Group* or *Delete Group*.

**After a group is deleted, it cannot be recovered and you must remake the group, including regathering any users who were members in that group at the time of the deletion.**

## Assigning to/Removing from Groups

Reorganizing users in and out of groups can be done quickly and easily in the Admin portal. To assign user(s) to a new group or remove them from their current group:

1. select the users they wish to either assign to a group or remove from a group,
1. if assigning to a group, select the group from the **Group** dropdown in the **Assign to Group** modal,
1. if removing the users from a group, affirm with the confirmation modal
